crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"import { var1, var2 } from \\\"path/to/module\\\"\"))"
---
[
    (
        Import(
            (
                false,
                0..6,
            ),
            (
                "import",
                0..6,
            ),
            (
                ImportSpecific(
                    [
                        (
                            "var1",
                            9..13,
                        ),
                        (
                            "var2",
                            15..19,
                        ),
                    ],
                ),
                7..21,
            ),
            (
                "from",
                22..26,
            ),
            (
                "path/to/module",
                27..43,
            ),
        ),
        0..43,
    ),
]
