crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__lt-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 < 2 + 1 < 5\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Lt(
                            (
                                Lt(
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        0..1,
                                                    ),
                                                ),
                                                0..1,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        4..5,
                                                    ),
                                                ),
                                                4..5,
                                            ),
                                        ),
                                        0..5,
                                    ),
                                    (
                                        Add(
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        8..9,
                                                    ),
                                                ),
                                                8..9,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        1.0,
                                                        12..13,
                                                    ),
                                                ),
                                                12..13,
                                            ),
                                        ),
                                        8..13,
                                    ),
                                ),
                                0..13,
                            ),
                            (
                                Number(
                                    (
                                        5.0,
                                        16..17,
                                    ),
                                ),
                                16..17,
                            ),
                        ),
                        0..17,
                    ),
                ),
                0..17,
            ),
        ),
        0..17,
    ),
]
