crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__not-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"not not true\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Not(
                            (
                                "not",
                                0..3,
                            ),
                            (
                                Not(
                                    (
                                        "not",
                                        4..7,
                                    ),
                                    (
                                        Boolean(
                                            (
                                                true,
                                                8..12,
                                            ),
                                        ),
                                        8..12,
                                    ),
                                ),
                                8..12,
                            ),
                        ),
                        8..12,
                    ),
                ),
                0..12,
            ),
        ),
        0..12,
    ),
]
